--- a/NEAControllerFormsApplication/NEAControllerFormsApplication/App.config
+++ b/NEAControllerFormsApplication/NEAControllerFormsApplication/App.config
@@ -1,6 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="NEAControllerFormsApplication.Properties.Settings.LaunchControlSystemConnectionString" connectionString="Data Source=DESKTOP-CMMVASL\SQLEXPRESS;Initial Catalog=LaunchControlSystem;Integrated Security=True;TrustServerCertificate=True" providerName="System.Data.SqlClient"/>
+    </connectionStrings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
 </configuration>
